[tool.poetry]
name = "pandas-processors"
version = "0.1.2"
description = "A Python library that provides utilities to process your pandas DataFrame."
authors = ["khuyentran1401 <khuyentran1476@gmail.com>"]
repository = "https://github.com/khuyentran1401/pandas-processors.git"
readme = "README.md"
documentation = "https://khuyentran1401.github.io/pandas-processors/"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
scipy = "^1.13.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
mypy = "^1.10.0"
pandas-stubs = "^2.2.2.240514"
pdoc3 = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501"]
select = ["B", "C", "E", "F", "W", "B9", "I", "Q"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

[tool.ruff.mccabe]
max-complexity = 10

[tool.mypy]
ignore_missing_imports = true